* Synchronizing the white cards with the officially listed fan translations from the CAH website by "Balz" and "Raphael". * Adding comments with contexts, known references and alternative/earlier/official translations.    * -> easier searchability for phrases and words    * -> should prevent duplicates and wrong translations. * Improving some phrases * Moving some phrases to other topics

--- a/categories/basis.tex
+++ b/categories/basis.tex
@@ -24,169 +24,228 @@
 \whitecard{Basis}{Ackerbau.}%
 \whitecard{Basis}{Aktives Zuhören.}%
 \whitecard{Basis}{Alkoholismus.}%
-\whitecard{Basis}{Alten Leuten winken.}%
+\whitecard{Basis}{Alten Leuten winken.}% probably: zuzwinkern (wink):
+\whitecard{Basis}{Alten Leuten zuzwinkern.}% 
+\whitecard{Basis}{An den Rand gedrängt werden.}%
 \whitecard{Basis}{An Dingen lecken, um sie für sich zu beanspruchen.}%
-\whitecard{Basis}{Anfangen, zu singen und zu tanzen.}%
+\whitecard{Basis}{Angst.}%
+\whitecard{Basis}{Arme Leute.}%
+\whitecard{Basis}{Atomare Zerstörung.}%
+\whitecard{Basis}{Attitüde.}%
 \whitecard{Basis}{Authentische mexikanische Küche.}%
 \whitecard{Basis}{Balzverhalten.}%
-\whitecard{Basis}{Bei den Special Olympics schummeln.}%
+\whitecard{Basis}{Bei den Paralympischen Spielen schummeln.}% before: Spcial Olympics
 \whitecard{Basis}{Bei der Erwähnung von Hutus und Tutsis unkontrollierbar kichern müssen.}%
 \whitecard{Basis}{Benutzte Unterhosen.}%
-\whitecard{Basis}{Betagte japanische Männer.}%
+\whitecard{Basis}{Betagte japanische Männer.}% original: alte japanische Leute
 \whitecard{Basis}{Bienen?}%
 \whitecard{Basis}{Bill Nye, dieser Wissenschafts-Heini.}%
 \whitecard{Basis}{Bis nach der Hochzeit warten.}%
+\whitecard{Basis}{Brennen.}%
 \whitecard{Basis}{Burschen ohne Ärsche.}%
+\whitecard{Basis}{Charisma.}%
+\whitecard{Basis}{Dieses Ding, das deine Muskeln mit Elektroschocks aufbaut.}%
 \whitecard{Basis}{Dunkle und mysteriöse Mächte, die man nicht kontrollieren kann.}%
 \whitecard{Basis}{Das Ende der Straße.}%
+\whitecard{Basis}{Das Gedränge.}%
 \whitecard{Basis}{Das Herz eines Kindes.}%
 \whitecard{Basis}{Das Leben eines Piraten.}%
 \whitecard{Basis}{Das letzte noch lebende Bison essen.}%
 \whitecard{Basis}{Das Licht einer Milliarde Sonnen.}%
 \whitecard{Basis}{Das Richtige tun.}%
-\whitecard{Basis}{Das Verletzen unserer grundlegensten Menschenrechte.}%
+\whitecard{Basis}{Der Süden.}%
+\whitecard{Basis}{Das Verletzen der meisten Menschenrechte.}% before: unserer grundlegensten Menschenrechte
 \whitecard{Basis}{Das Wunder der Geburt.}%
 \whitecard{Basis}{Ein merkwürdiger Bruder.}%
+\whitecard{Basis}{Dem Singen und Tanzen verfallen.}% before: Anfangen zu 
 \whitecard{Basis}{Dem Sonnen- untergang entgegenreiten.}%
+\whitecard{Basis}{Den Hintern versohlen.}% original: Ihr den ...
+\whitecard{Basis}{Der fleißige Mexikaner.}%
 \whitecard{Basis}{Der Geruch alter Leute.}%
 \whitecard{Basis}{Der Milchmann.}%
-\whitecard{Basis}{Der amerikanische Traum.}%
+\whitecard{Basis}{Der Amerikanische Traum.}%
+\whitecard{Basis}{Der Burgerklau.}%
 \whitecard{Basis}{Der Erklär-Bär-Blick.}%
 \whitecard{Basis}{Der Ku-Klux-Klan.}%
 \whitecard{Basis}{Der Rhythmus Afrikas.}%
 \whitecard{Basis}{Der unausweichliche Hitzetod des Universums.}%
 \whitecard{Basis}{Die Hosen runterlassen.}%
+\whitecard{Basis}{Die Chronik.}%
 \whitecard{Basis}{Die Kunst der Verführung.}%
 \whitecard{Basis}{Die Leiden einer Frau.}%
-\whitecard{Basis}{Die Quoten-Minderheit.}%
-\whitecard{Basis}{Die Placenta.}%
-\whitecard{Basis}{Die unendliche menschliche Dummheit.}%
+\whitecard{Basis}{Die Quoten-Minderheit.}% original: Vorzeigeminderheit
+\whitecard{Basis}{Die Plazenta.}%
+\whitecard{Basis}{Die unendliche menschliche Dummheit.}% original: unergründliche Dummheit
 \whitecard{Basis}{Die unsichtbare Hand.}%
-\whitecard{Basis}{Die wahre Bedeutung von Weihnachten.}%
 \whitecard{Basis}{Die Wunder des Orients.}%
-\whitecard{Basis}{DU MUSST WEITERE MASTEN KONSTRUIEREN.}%
+\whitecard{Basis}{Dosenfressende Ziegen.}%
+\whitecard{Basis}{Dreistigkeit.}%
+\whitecard{Basis}{Donnernde Fürze.}%
+\whitecard{Basis}{``YOU MUST CONSTRUCT ADDITIONAL PYLONS!``}% Starcraft Meme -> translation?
 \whitecard{Basis}{Echte zwischenmenschliche Beziehungen.}%
-\whitecard{Basis}{Ehefrauliche Pflichten.}%
+\whitecard{Basis}{Eheliche Pflichten.}%
 \whitecard{Basis}{Eier.}%
 \whitecard{Basis}{Ein Arschloch zu Kindern sein.}%
 \whitecard{Basis}{Ein Arsch mit Ohren sein.}%
 \whitecard{Basis}{Ein bisschen Ruhe und Frieden, verdammt nochmal.}%
 \whitecard{Basis}{Ein chinesisches Gymnastikteam.}%
+\whitecard{Basis}{Ein deftiger Frühstücks-Döner.}% before: scharfer Frühstücks-Burrito
 \whitecard{Basis}{Eine Backpfeife.}%
 \whitecard{Basis}{Eine Billiarde Euro.}%
-\whitecard{Basis}{Eine Eishacken-Lobotomie.}%
+\whitecard{Basis}{Eine dumme Entscheidung.}%
+\whitecard{Basis}{Eine Eispickel-Lobotomie.}%
 \whitecard{Basis}{Eine hässliche Fresse.}%
 \whitecard{Basis}{Ein Ei legen.}%
 \whitecard{Basis}{Ein Eimer voller Fischköpfe.}%
 \whitecard{Basis}{Eine Jungfrau in einen Vulkan werfen.}%
-\whitecard{Basis}{Einem Roboter beibringen, zu lieben.}%
-\whitecard{Basis}{Eine asymmetrische Brust-vergößerung.}%
+\whitecard{Basis}{Einem Kind Süßigigkeiten wegnehmen.}%
+\whitecard{Basis}{Einem Roboter beibringen, zu Lieben.}%
+\whitecard{Basis}{Eine asymmetrischer Kunst-Busen.}% before: Eine asymmetrische Brust-vergößerung
 \whitecard{Basis}{Eine enttäuschende Geburtstags- party.}%
-\whitecard{Basis}{Eine geschwätzige Antilope.}%
+\whitecard{Basis}{Eine geschwätzige Antilope.}% origig probably: Eine furzende Antilope:
+\whitecard{Basis}{Eine Grimasse schneiden.}%
+\whitecard{Basis}{Eine furzende Antilope.}% 
 \whitecard{Basis}{Eine homoerotische Volleyball- Montage.}%
 \whitecard{Basis}{Eine Mitgliedschaft in einem Fitness-Center.}%
-\whitecard{Basis}{Einen Kronleuchter auf seine Feinde fallen lassen und am Seil hochklettern.}%
+\whitecard{Basis}{Einen Kronleuchter auf deine Feinde fallen lassen und am Seil hochklettern.}%
+\whitecard{Basis}{Einen Nierenstein ausscheiden.}%
 \whitecard{Basis}{Einen Schmollmund machen.}%
 \whitecard{Basis}{Eine salzige Überraschung.}%
 \whitecard{Basis}{Eine Spur aus Tränen}%
-\whitecard{Basis}{Einfach großartig sein.}%
-\whitecard{Basis}{Ein Falke mit einer Mütze auf dem Kopf.}%
+\whitecard{Basis}{Einfach großartig sein.}% original: fabelhaft
+\whitecard{Basis}{Ein Falke mit Kappe auf dem Kopf.}%
 \whitecard{Basis}{Ein Gehirntumor.}%
-\whitecard{Basis}{Ein geschmackvolles Dekolleté.}%
-\whitecard{Basis}{Ein Glassdach.}%
+\whitecard{Basis}{Ein Glasdach.}% original: Glasdecke
+\whitecard{Basis}{Ein Hammer in der Dose.}%
+\whitecard{Basis}{Ein heißes Durcheinander.}%
 \whitecard{Basis}{Ein kleines Pferd.}%
 \whitecard{Basis}{Ein Leben voller Traurigkeit.}%
+\whitecard{Basis}{Ein loses Mundwerk.}% before: schmutziges 
 \whitecard{Basis}{Einmal richtig dran schnuppern.}%
-\whitecard{Basis}{Ein Mann mittleren Alters in Rollschuhen.}%
+\whitecard{Basis}{Ein Mann mittleren Alters auf Rollschuhen.}%
 \whitecard{Basis}{Ein Nerd-Spasti.}%
 \whitecard{Basis}{Ein ausgewogenes Frühstück.}%
 \whitecard{Basis}{Ein gottverdammter Zauberer sein.}%
-\whitecard{Basis}{Ein Mikroschwein mit einem Regenmantel und Gummiestiefeln.}%
-\whitecard{Basis}{Ein Pantomime, der einen Herzinfarkt hat.}%
+\whitecard{Basis}{Ein Minischwein mit einem Regenmantel und Gummiestiefeln.}% before: Mikroschwein
+\whitecard{Basis}{Ein Pantomime, der einen Schlaganfall hat.}% before: Herzinfarkt
 \whitecard{Basis}{Ein Ratschlag von einem weisen alten Mann.}%
 \whitecard{Basis}{Ein rauchender Affe.}%
-\whitecard{Basis}{Ein Sack voller magischer Bohnen.}%
-\whitecard{Basis}{Ein scharfer Frühstücks-Burrito.}%
-\whitecard{Basis}{Ein schmutziges Mundwerk.}%
+\whitecard{Basis}{Ein Sack voller magischer Bohnen.}% original: Beutel Zauberbohnen
+\whitecard{Basis}{Ein See voller Probleme.}%
+\whitecard{Basis}{Ein Todesstrahl.}%
 \whitecard{Basis}{Ein Stamm von Kriegerinnen.}%
 \whitecard{Basis}{Ein törichter Mord.}%
 \whitecard{Basis}{Ein trübseliger Zoo-Löwe.}%
-\whitecard{Basis}{Ein übergroßer Lolli.}%
 \whitecard{Basis}{Ein verirrtes Schamhaar.}%
 \whitecard{Basis}{Ein wirklich cooler Hut.}%
+\whitecard{Basis}{Eine merkwürdige Mailbox- nachricht hinterlassen.}%
 \whitecard{Basis}{Würstchen-Party}%
-\whitecard{Basis}{Embrionale Stammzellen.}%
+\whitecard{Basis}{Embryonale Stammzellen.}%
 \whitecard{Basis}{Emotionen.}%
-\whitecard{Basis}{Erdrückende Schulden.}%
+\whitecard{Basis}{Erdrückende Schulden.}% possible doublicate with "Lähmende Schulden"
+\whitecard{Basis}{Es gibt kein Zurück.}%
 \whitecard{Basis}{Essbare Unterwäsche.}%
 \whitecard{Basis}{Explosionen.}%
 \whitecard{Basis}{Extrem enge Hosen.}%
+\whitecard{Basis}{Fangfragen in der Abschlussprüfung.}%
 \whitecard{Basis}{Feigenpudding.}%
 \whitecard{Basis}{Fett und dumm sein.}%
-\whitecard{Basis}{Fingerfarben.}%
+\whitecard{Basis}{Fingerfarben.}% original: Fingermalerei
 \whitecard{Basis}{Fleischfressende Bakterien.}%
 \whitecard{Basis}{Flugunfähige Vögel.}%
 \whitecard{Basis}{Frauen in Joghurt-Werbespots.}%
+\whitecard{Basis}{Frauenwahlrecht.}%
+\whitecard{Basis}{Freunde, die alle Snacks wegessen.}%
 \whitecard{Basis}{Friendly Fire.}%
 \whitecard{Basis}{Frohlocken.}%
 \whitecard{Basis}{Funkig-frische Rhythmen.}%
-\whitecard{Basis}{Für das Verschwinden von Schwulen beten.}%
+\whitecard{Basis}{Für das Verschwinden von Schwulen beten.}% original: Die Schwulen wegwünschen.
 \whitecard{Basis}{Gänse.}%
+\whitecard{Basis}{Gefühle.}%
 \whitecard{Basis}{Geister.}%
-\whitecard{Basis}{Genau das, was du vermuten würdest.}%
+\whitecard{Basis}{Gelaber.}%
+\whitecard{Basis}{Genau das, was du vermuten würdest.}% original: Genau was du bekommst
+\whitecard{Basis}{Genetik.}% original: Vererbungslehre
 \whitecard{Basis}{Genetisch manipulierte Kampf-Schildkröten mit Säure-Atem.}%
 \whitecard{Basis}{Gerichtlich angeordneter  Entzug.}%
 \whitecard{Basis}{Gestaltwandler.}%
 \whitecard{Basis}{Glänzende Dinge.}%
 \whitecard{Basis}{Gleich- geschlechtlicher Eiskunstlauf.}%
+\whitecard{Basis}{Globale Erwärmung.}%
 \whitecard{Basis}{Goblins.}%
-\whitecard{Basis}{Grabrauben.}%
-\whitecard{Basis}{Großmutter.}%
-\whitecard{Basis}{Halb nackt auf einem McDonalds- Parkplatz aufwachen.}%
+\whitecard{Basis}{Grabschändung.}%
+\whitecard{Basis}{Oma.}% before: Großmutter
+\whitecard{Basis}{Großes Aufheben um Nichts.}%
+\whitecard{Basis}{Gutes Benehmen.}%
+\whitecard{Basis}{Hahnenkämpfe.}%
+\whitecard{Basis}{Halb nackt auf einem McDonalds- Parkplatz aufwachen.}% original: Danny`s
+\whitecard{Basis}{Halbherziger Kompromiss.}%
+\whitecard{Basis}{Harakiri.}%
 \whitecard{Basis}{Hefe.}%
 \whitecard{Basis}{Heiraten, ein paar Kinder haben, ein bisschen Kram kaufen, sich dann zur Ruhe setzen und sterben.}%
-\whitecard{Basis}{Heiße Menschen.}%
-\whitecard{Basis}{Heißer Käse.}%
-\whitecard{Basis}{Herpes.}%
-\whitecard{Basis}{Herz- erweichende Weisenkinder.}%
+\whitecard{Basis}{Heiße Leute.}% before: Menschen
+\whitecard{Basis}{Warmer Käse.}% before: heißer
+\whitecard{Basis}{Herumtollen.}%
+\whitecard{Basis}{Mundherpes.}%
+\whitecard{Basis}{Heiße Apfeltaschen.}%
+\whitecard{Basis}{Herz- erweichende Waisenkinder.}%
 \whitecard{Basis}{Hetero- normativität.}%
 \whitecard{Basis}{Hip-Hop Juwelen.}%
-\whitecard{Basis}{Hippiemusik.}%
+\whitecard{Basis}{Hippiemusik.}% original: New-Age Musik
 \whitecard{Basis}{Hoffnung.}%
-\whitecard{Basis}{Homosexueller Lebensstil.}%
-\whitecard{Basis}{Hormon-Injektionen.}%
+\whitecard{Basis}{Homosexualität.}% 
+\whitecard{Basis}{Homosexueller Lebensstil.}% original probably: Agenda
+\whitecard{Basis}{Hormonspritzen.}%
+\whitecard{Basis}{Hundewelpen.}% original: Hundebabies
 \whitecard{Basis}{``Ich liebe dich'' sagen.}%
 \whitecard{Basis}{In Flammen  stehen.}%
 \whitecard{Basis}{In Problemen ertrinken.}%
-\whitecard{Basis}{Kamikaze-Kissen.}%
+\whitecard{Basis}{Intelligentes Design.}%
+\whitecard{Basis}{Internat.}%
+\whitecard{Basis}{Japaner, die nicht gut in Mathe sind.}%
+\whitecard{Basis}{Jede Ecke putzen.}%
+\whitecard{Basis}{Kamikaze-Kissen.}% probably orig: Kamikaze-Pilot (pilot <-> pillow?):
+\whitecard{Basis}{Kamikaze-Pilot.}%
 \whitecard{Basis}{Keine Hosen tragen.}%
-\whitecard{Basis}{Kettensäge für die Hände.}%
+\whitecard{Basis}{Kerle, die nicht anrufen.}%
+\whitecard{Basis}{Kettensägen als Hände.}% before: für die Hände
 \whitecard{Basis}{Kiefersperre.}%
-\whitecard{Basis}{Kinder an Leinen.}%
-\whitecard{Basis}{Kinder-Schönheits- wettbewerbe.}%
+\whitecard{Basis}{Kinder an einer Leine.}%
+\whitecard{Basis}{Kinder-Schönheits- wettbewerbe.}% 
+\whitecard{Basis}{Kinder-Models.}% 
+\whitecard{Basis}{Kofferdämme.}%
 \whitecard{Basis}{Kostenlose Proben.}%
 \whitecard{Basis}{Kräftige Oberschenkel.}%
 \whitecard{Basis}{Krankenpfleger.}%
-\whitecard{Basis}{Krankhaft Fettleibige.}%
+\whitecard{Basis}{Kundenservice- Mitarbeiter.}%
+\whitecard{Basis}{Fettleibigkeit}% before: Krankhaft Fettleibige.
 \whitecard{Basis}{Krümel überall auf dem ganzen gottverdammten Teppich.}%
 \whitecard{Basis}{Kuscheln.}%
 \whitecard{Basis}{Kybernetische Verbesserungen.}%
 \whitecard{Basis}{Landminen.}%
+\whitecard{Basis}{Landwirtschaft.}%
+\whitecard{Basis}{Leibeigenschaft.}%
+\whitecard{Basis}{Lunchpakete.}%
+\whitecard{Basis}{Macht.}% different to: The Force
 \whitecard{Basis}{Management-Lösungen mit Synergie-Effekt.}%
 \whitecard{Basis}{Männer.}%
 \whitecard{Basis}{Mehrfache Stichwunden.}%
 \whitecard{Basis}{Mein Beziehungs- status.}%
 \whitecard{Basis}{Meine inneren Dämonen.}%
 \whitecard{Basis}{Meine Genitalien.}%
+\whitecard{Basis}{Meine Hüfte.}%
 \whitecard{Basis}{Meine Warzen.}%
 \whitecard{Basis}{Mein schwarzer Hintern.}%
+\whitecard{Basis}{Menstruation.}%
 \whitecard{Basis}{Menstruell bedingte Wutanfälle.}%
 \whitecard{Basis}{Natürliche männliche Verbesserungen.}%
 \whitecard{Basis}{Natürliche Selektion.}%
+\whitecard{Basis}{Noch ein beschissener Vampirfilm.}%
 \whitecard{Basis}{Obdachlose.}%
+\whitecard{Basis}{Objektpermanenz.}% -> from: psych. child development
 \whitecard{Basis}{Ödipuskomplex.}%
 \whitecard{Basis}{Öffentliches Verspotten.}%
-\whitecard{Basis}{Opponierbare Daumen.}%
+\whitecard{Basis}{Opponierbare Daumen.}% original: gegenüberstellbar -> (biolog: opponierbar)
 \whitecard{Basis}{Östrogen.}%
 \whitecard{Basis}{Passiv-aggressive Post-Its.}%
 \whitecard{Basis}{Penis-Neid.}%
@@ -196,8 +255,11 @@
 \whitecard{Basis}{Popel.}%
 \whitecard{Basis}{Pottwale.}%
 \whitecard{Basis}{Pre-Teens.}%
+\whitecard{Basis}{Pterodactylus-Eier.}%
 \whitecard{Basis}{Pubertät.}%
+\whitecard{Basis}{Pudding.}%
 \whitecard{Basis}{Rassismus.}%
+\whitecard{Basis}{Reibung}%
 \whitecard{Basis}{Reich sein.}%
 \whitecard{Basis}{Rück- erstattungen.}%
 \whitecard{Basis}{Saxophon Solos.}%
@@ -209,8 +271,9 @@
 \whitecard{Basis}{Sein Shirt ausziehen.}%
 \whitecard{Basis}{Selbsthass.}%
 \whitecard{Basis}{Selbstjustiz.}%
-\whitecard{Basis}{Sich alleine betrinken.}%
+\whitecard{Basis}{Sich alleine betrinken.}% original: alleine Alkohol trinken
 \whitecard{Basis}{Sich ein paar Eier wachsen lassen.}%
+\whitecard{Basis}{SMS.}%
 \whitecard{Basis}{Snobismus.}%
 \whitecard{Basis}{Sonnenschein und Regenbögen.}%
 \whitecard{Basis}{So zu tun, als ob es einen interessieren würde.}%
@@ -219,46 +282,63 @@
 \whitecard{Basis}{Spontane Selbstentzündung.}%
 \whitecard{Basis}{Sterben.}%
 \whitecard{Basis}{Ein Moment der Stille.}%
+\whitecard{Basis}{Skalpierung.}%
+\whitecard{Basis}{Sonderschulen.}%
+\whitecard{Basis}{Stubenhocker.}%
+\whitecard{Basis}{Sturzfluten.}%
 \whitecard{Basis}{Suppe, die zu heiß ist.}%
 \whitecard{Basis}{Süße, süße Rache.}%
 \whitecard{Basis}{Swooping.}%
 \whitecard{Basis}{Tänzeln.}%
-\whitecard{Basis}{Teenager Schwangerschaft.}%
+\whitecard{Basis}{Teambildungs- maßnahmen.}% original: -übungen
+\whitecard{Basis}{Teenager- schwangerschaft.}%
 \whitecard{Basis}{Thermodynamik.}%
-\whitecard{Basis}{Thermonucleare Detonation.}%
+\whitecard{Basis}{Thermonukleare Explosion.}% before: Detonation
+\whitecard{Basis}{Trichtersaufen.}%
+\whitecard{Basis}{``Twittern``.}%
 \whitecard{Basis}{U-Bahn.}%
+\whitecard{Basis}{Übergroße Lollis.}%
 \whitecard{Basis}{Überkompen- sation.}%
+\whitecard{Basis}{Überraschungsangriff.}%
 \whitecard{Basis}{Unangemes- senes Jodeln.}%
 \whitecard{Basis}{Unfassbare Blödheit.}%
 \whitecard{Basis}{Unterdrückung.}%
 \whitecard{Basis}{Vaterkomplexe.}%
-\whitecard{Basis}{Velociraptor Angriffe.}%
-\whitecard{Basis}{Von einem Gefühl erwischt werden.}%
+\whitecard{Basis}{Velociraptor- angriffe.}%
+\whitecard{Basis}{Verwurschtelte Kabel.}%
+\whitecard{Basis}{Virtuose Jazz-Hands.}%
+\whitecard{Basis}{Von einem Gefühl erwischt werden.}% orig: Mit einem Gefühl zurecht kommen
+\whitecard{Basis}{Von Mundwasser betrunken werden.}%
+\whitecard{Basis}{Vulgarität.}%
+\whitecard{Basis}{Weiße.}%
 \whitecard{Basis}{Welpen!}%
+\whitecard{Basis}{Waterboarding.}%
 \whitecard{Basis}{Wissenschaft.}%
 \whitecard{Basis}{Würgen.}%
-\whitecard{Basis}{Zeit für mich.}%
+\whitecard{Basis}{Wurstfinger.}%
+\whitecard{Basis}{Zärtlichkeiten austauschen.}%
+\whitecard{Basis}{Zeehn- bis Zwölfjährige.}%
+\whitecard{Basis}{Zeit für sich.}% before: mich
 \whitecard{Basis}{Zentauren.}%
+\whitecard{Basis}{Zu viel Haargel.}%
 \whitecard{Basis}{Zuhälter.}%
+\whitecard{Basis}{Zurückschenken.}%
 \whitecard{Basis}{Rassisitisch voreingenommene Einstellungstests.}%
-\whitecard{Basis}{Ein Zigeunerfluch.}%
 \whitecard{Basis}{Ein rechtschaffender Cop, der nichts zu verlieren hat}%
 \whitecard{Basis}{Sexting}%
 \whitecard{Basis}{Gestalten-Wandler}%
 \whitecard{Basis}{Pornostars}%
 \whitecard{Basis}{Vergewaltigen und plündern.}%
 \whitecard{Basis}{Drive-by shooting.}%
-\whitecard{Basis}{Kantinenfrass.}%
+\whitecard{Basis}{Kantinenfraß.}%
 \whitecard{Basis}{Klunker.}%
-\whitecard{Basis}{Berater.}%
-\whitecard{Basis}{Lähmende Schulden.}%
+\whitecard{Basis}{Berater.}% 
+\whitecard{Basis}{Lähmende Schulden.}% possible doublicate with "Erdrückende Schulden"
 \whitecard{Basis}{Das Reiner-Calmund-Qualitäts-Siegel.}%
 \whitecard{Basis}{Vorgeben zu verhüten.}%
 \whitecard{Basis}{Öffentliches}%
 \whitecard{Basis}{Verspotten.}%
 \whitecard{Basis}{Spritzen teilen.}%
-\whitecard{Basis}{Der unausweichliche Hitzetod des Universums.}%
-\whitecard{Basis}{Das Wunder der Geburt.}%
 \whitecard{Basis}{Ein M16 Sturmgewehr.}%
 \whitecard{Basis}{110\% geben}%
 %
