--- a/categories/boese.tex
+++ b/categories/boese.tex
@@ -21,35 +21,45 @@
 %
 \titlecard{Böse}%
 %
-\whitecard{Böse}{Abtreibungen mit Kleiderbügeln.}%
+\whitecard{Böse}{Kleiderbügel- Abtreibung.}%
 \whitecard{Böse}{AIDS.}%
+\whitecard{Böse}{Alle Kekse vor einem AIDS-Spendenlauf essen.}%
 \whitecard{Böse}{Auschwitz.}%
 \whitecard{Böse}{Auto- kannibalismus.}%
 \whitecard{Böse}{Ein Fötus.}%
 \whitecard{Böse}{Nekrophilie.}%
 \whitecard{Böse}{Eine Pyramide aus abgetrennten Köpfen.}%
-\whitecard{Böse}{Ein Kühlschrank voller Organe.}%
-\whitecard{Böse}{Ein robuster Mongoloider.}%
+\whitecard{Böse}{Ein Tiefkühlschrank voller Organe.}%
+\whitecard{Böse}{Ein starker Mongoloid.}%
+\whitecard{Böse}{Erträgliche Transvestiten.}% original: passable
+\whitecard{Böse}{Frauen an einer Abtreibungsklinik anmachen.}%
 \whitecard{Böse}{Hungersnot.}%
+\whitecard{Böse}{Jüdische Burschenschaften.}%
 \whitecard{Böse}{Kinder mit Arsch-Krebs.}%
 \whitecard{Böse}{Kindes- missbrauch.}%
+\whitecard{Böse}{Kinnhaken.}%
 \whitecard{Böse}{Kreuzigung.}%
+\whitecard{Böse}{Männerfleisch.}%
 \whitecard{Böse}{Menschenfleisch.}%
-\whitecard{Böse}{Menschen mit Amputationen.}%
+\whitecard{Böse}{Amputierte.}% before: Menschen mit Amputationen
+\whitecard{Böse}{Mit Pockenviren versehene Decken.}%
 \whitecard{Böse}{Rassenhygiene.}%
-\whitecard{Böse}{Robo-Hitler.}%
-\whitecard{Böse}{Schlechte Holocaust-Witze.}%
+\whitecard{Böse}{Robo-Hitler.}% original: Mecha-Hitler
+\whitecard{Böse}{Schlecht getimte Holocaust-Witze.}%
 \whitecard{Böse}{Schwer- behinderte.}%
 \whitecard{Böse}{Teile eines toten Anhalters.}%
-\whitecard{Böse}{Tote Babys.}%
+\whitecard{Böse}{Tote Babies.}%
 \whitecard{Böse}{Tote Eltern.}%
-\whitecard{Böse}{Vehikulärer Massenmord.}%
+\whitecard{Böse}{Weiße mit Afros.}%
+\whitecard{Böse}{Zwergenwerfen.}%
+\whitecard{Böse}{Massenmord mit einem Fahrzeug.}% before: vehikulärer -> is not a German word - original: Körperverletzung mit einem Fahrzeug
 \whitecard{Böse}{Pedophile.}%
 \whitecard{Böse}{Afrikanische Kinder.}%
 \whitecard{Böse}{Eine Windmühle voller Leichen.}%
-\whitecard{Böse}{Sich einen Dreck um die dritte Welt scheren.}%
+\whitecard{Böse}{Einen Scheiß um die Dritte Welt scheren.}%
 \whitecard{Böse}{Skalps von weißen Männern.}%
-\whitecard{Böse}{Verlust von Zivilisten.}%
+\whitecard{Böse}{Privilegien der Weißen.}%
+\whitecard{Böse}{Zivile Opfer.}% before: Verlust von Zivilisten
 \whitecard{Böse}{Lepra.}%
 \whitecard{Böse}{Seppuku.}%
 \whitecard{Böse}{Ethnische Säuberung.}%
