--- a/categories/drogen.tex
+++ b/categories/drogen.tex
@@ -21,8 +21,9 @@
 %
 \titlecard{Drogen}%
 %
-\whitecard{Drogen}{8kg Heroin.}%
+\whitecard{Drogen}{8g bestes russisches Heroin.}% before: 8kg Heroin
 \whitecard{Drogen}{Amphetamin.}%
+\whitecard{Drogen}{Ein guter Schnupfer.}%
 \whitecard{Drogen}{Kleber schnüffeln.}%
 \whitecard{Drogen}{Mal so richtig high werden.}%
 \whitecard{Drogen}{Ein Drogendeal.}%
