--- a/categories/eklig.tex
+++ b/categories/eklig.tex
@@ -21,23 +21,30 @@
 %
 \titlecard{Eklig}%
 %
-\whitecard{Eklig}{Brennende Schisse.}%
-\whitecard{Eklig}{Ein Ball aus Ohrenschmalz, Sperma und Fussnägeln.}%
-\whitecard{Eklig}{Ein bisschen pinkeln.}%
+\whitecard{Eklig}{Brennende Scheiße.}%
+\whitecard{Eklig}{Ein Ball aus Ohrenschmalz, Sperma und Fußnägeln.}%
+\whitecard{Eklig}{Ein bisschen einnässen.}% before: pinkeln
+\whitecard{Eklig}{Ein heimlicher Arschkratzer.}%
+\whitecard{Eklig}{Einnässen.}%
 \whitecard{Eklig}{Durchfall. Für immer.}%
 \whitecard{Eklig}{Ein Kind festhalten und es anfurzen.}%
-\whitecard{Eklig}{Furzen und dann weglaufen.}%
+\whitecard{Eklig}{Furzen und einfach weggehen.}% before: dann weglaufen
+\whitecard{Eklig}{Fressen und Kotzen.}%
+\whitecard{Eklig}{``Poop Back and Forth. Forever!``}% reference: "Me and You and Everyone We Know" -> translation?
+\whitecard{Eklig}{Sich einkacken.}% original: einscheißen
 \whitecard{Eklig}{Sich überfressen und dann abführen.}%
 \whitecard{Eklig}{Smegma.}%
+\whitecard{Eklig}{Tod durch Durchfall.}%
+\whitecard{Eklig}{Unterwäsche wenden, um sie nicht waschen zu müssen.}% original: falsch herum tragen
+\whitecard{Eklig}{Würgen ohne Erbrechen.}%
 \whitecard{Eklig}{Ein endloser Strom aus Diarrhoe.}%
-\whitecard{Eklig}{Zwei Kleinwüchsige, die in einen Eimer scheissen.}%
+\whitecard{Eklig}{Zwei Zwerge, die in einen Eimer scheißen.}% before: Kleinwüchsige
 \whitecard{Eklig}{An Dünnschiss sterben.}%
 \whitecard{Eklig}{Thomas Gottschalks weicher, verschrumpelter Körper.}%
 \whitecard{Eklig}{Vollgeschissene Windeln.}%
-\whitecard{Eklig}{Wenn man furzt und ein bisschen mit rauskommt.}%
+\whitecard{Eklig}{Wenn man furzt und ein bisschen Kacke mit rauskommt.}%
 \whitecard{Eklig}{Einen Rülpser erwarten und stattdessen auf den Boden kotzen.}%
-\whitecard{Eklig}{Ein Fotzenfurz.}%
-\whitecard{Eklig}{Ein Schwamm voller Katzenpisse.}
+\whitecard{Eklig}{Fotzenfürze.}% original: Vaginalfürze
 %
 \blackcard{2}{Eklig}{Für meinen nächsten Trick werde ich \underl aus \underl rausziehen.}%
 \blackcard{1}{Eklig}{Was lässt mich unkontrolliert furzen?}%
