--- a/categories/fsk16.tex
+++ b/categories/fsk16.tex
@@ -21,50 +21,59 @@
 %
 \titlecard{FSK 16}%
 %
-\whitecard{FSK 16}{50,000 Volt genau in die Nippel.}%
+\whitecard{FSK 16}{50.000 Volt genau in die Nippel.}%
 \whitecard{FSK 16}{Daniel Radcliffes appetitliches Arschloch.}%
 \whitecard{FSK 16}{Der weibliche Orgasmus.}%
-\whitecard{FSK 16}{Eine erotische schwarze Frau.}%
+\whitecard{FSK 16}{Eine Anmache.}%
+\whitecard{FSK 16}{Eine freche schwarze Frau.}% before: erotische
 \whitecard{FSK 16}{Ein gebleichtes Arschloch.}%
 \whitecard{FSK 16}{Ein kaputtes Kondom.}%
 \whitecard{FSK 16}{Ein Mikropenis.}%
+\whitecard{FSK 16}{Ein natürliches Aphrodisiakum.}%
 \whitecard{FSK 16}{Erektile Dysfunktion.}%
-\whitecard{FSK 16}{Feuchte Träume.}%
+\whitecard{FSK 16}{Feuchte Träume.}% original: feuchter Traum
 \whitecard{FSK 16}{Fliegende Sex-Schlangen.}%
-\whitecard{FSK 16}{Erotische Kissen- schlachten.}%
-\whitecard{FSK 16}{``Ihn'' rausholen.}%
+\whitecard{FSK 16}{Heavy Petting.}% original: Third Base (https://en.wikipedia.org/wiki/Baseball_metaphors_for_sex)
+\whitecard{FSK 16}{Erotische Kissen- schlachten.}% original: sexy
+\whitecard{FSK 16}{Genitalpircings.}%
+\whitecard{FSK 16}{Geschmackvolle Seitentitte.}% original: sideboob, before: Dekolleté
+\whitecard{FSK 16}{Harald Schmidts Hoden im Vorhang verfangen.}%
+\whitecard{FSK 16}{Hodentorsion.}%
+\whitecard{FSK 16}{Hose mit ausgespartem Hintern.}%
+\whitecard{FSK 16}{``Ihn'' rausholen.}% original: Es rausholen.
 \whitecard{FSK 16}{Klitoris.}%
 \whitecard{FSK 16}{Lance Armstrongs fehlender Hoden.}%
 \whitecard{FSK 16}{Masturbation.}%
 \whitecard{FSK 16}{Meine Vagina.}%
+\whitecard{FSK 16}{Nippelpiercings.}%
 \whitecard{FSK 16}{Oma nackt sehen.}%
 \whitecard{FSK 16}{Penis-Atem.}%
 \whitecard{FSK 16}{Penis-Finger.}%
-\whitecard{FSK 16}{Sanftes Liebkosen der Oberschenkel.}%
-\whitecard{FSK 16}{Schlechtes Vorspiel.}%
-\whitecard{FSK 16}{So wütend werden, dass man eine Erektion bekommt.}%
-\whitecard{FSK 16}{Stephen Hawkings Sexgespräche.}%
+\whitecard{FSK 16}{Sanftes Liebkosen der Oberschenkel- innenseite.}%
+\whitecard{FSK 16}{Halbherziges Vorspiel.}%
+\whitecard{FSK 16}{So sauer werden, dass man einen Ständer bekommt.}%
+\whitecard{FSK 16}{Stephen Hawking, der versaut redet.}% before: Sexgespräche
 \whitecard{FSK 16}{Ein Mann am Rande des Orgasmus.}%
 \whitecard{FSK 16}{Testikuläre Verdrehung.}%
-\whitecard{FSK 16}{Überraschungs Sex!}%
-\whitecard{FSK 16}{Vollständige Nacktheit.}%
-\whitecard{FSK 16}{Vorhäute.}%
-\whitecard{FSK 16}{Erotische Harry-Potter Literatur.}%
+\whitecard{FSK 16}{Überraschungs- sex!}%
+\whitecard{FSK 16}{Völlig nackt.}%
+\whitecard{FSK 16}{Vorhäute.}% original: Vorhaut
+\whitecard{FSK 16}{Erotische Harry-Potter Geschichten.}% before: Literatur
 \whitecard{FSK 16}{Laktation.}%
 \whitecard{FSK 16}{Sexuelle Spannungen.}%
-\whitecard{FSK 16}{Sich nackt ausziehen und Kika gucken.}%
+\whitecard{FSK 16}{Sich nackt ausziehen und KiKa gucken.}% original: Nickelodeon
 \whitecard{FSK 16}{Einvernehm-\newline licher Sex.}%
 \whitecard{FSK 16}{Alice Schwarzers Vagina.}%
-\whitecard{FSK 16}{Bilder von Brüsten.}%
+\whitecard{FSK 16}{Bilder von Brüsten.}% original: Titten
 \whitecard{FSK 16}{Eine Erektion, die länger als vier Stunden dauert.}%
-\whitecard{FSK 16}{Eine Erektion verstecken.}%
+\whitecard{FSK 16}{Einen Ständer verstecken.}% before: Erektion
 \whitecard{FSK 16}{Eregierte Nippel.}%
 \whitecard{FSK 16}{Freunde mit gewissen Vorzügen.}%
 \whitecard{FSK 16}{Holzfäller Phantasien.}%
 \whitecard{FSK 16}{Mein Sexleben.}%
 \whitecard{FSK 16}{Schenkel- schnorcheln.}%
 \whitecard{FSK 16}{Panda Sex.}%
-\whitecard{FSK 16}{Eine Schildkröte, die einem in den Penis beißt.}%
+\whitecard{FSK 16}{Eine Schnappschildkröte, die einem in die Penisspitze beißt.}%
 %
 \blackcard{1}{FSK 16}{Eine Studie ergab, dass Teenager 50 Prozent weniger Sex hatten, nachdem man ihnen \underl zeigte.}%
 \blackcard{1}{FSK 16}{Ich denke während dem Sex gerne über \underl nach.}%
