--- a/categories/fsk18.tex
+++ b/categories/fsk18.tex
@@ -22,19 +22,24 @@
 \titlecard{FSK 18}%
 %
 \whitecard{FSK 18}{Anal-Sex.}%
-\whitecard{FSK 18}{Analkette.}%
+\whitecard{FSK 18}{Analperlenkette.}% before: Analkette
+\whitecard{FSK 18}{Blowjob während der Autofahrt.}%
 \whitecard{FSK 18}{Deutsche  Sado-Maso- Pornos.}%
-\whitecard{FSK 18}{Ein Gewehr in die Luft abfeuern mit den Eiern tief in einer quiekenden Sau.}%
+\whitecard{FSK 18}{Ein Gewehr in die Luft abfeuern mit den Eiern tief in einer quiekenden Sau.}% original: Mit einem Maschinengewehr in die Luft schießen, während man bis zu den Eiern in einem qiekendem Schwein steckt.
+\whitecard{FSK 18}{Es von hinten besorgt bekommen.}%
 \whitecard{FSK 18}{Fingern.}%
 \whitecard{FSK 18}{Gloryholes.}%
 \whitecard{FSK 18}{Ihr den Arsch abwischen.}%
 \whitecard{FSK 18}{In einen Pool voller Kindertränen wichsen.}%
 \whitecard{FSK 18}{Inzest.}%
-\whitecard{FSK 18}{Natursekt.}%
+\whitecard{FSK 18}{Natursekt- spiele.}%
 \whitecard{FSK 18}{Oralsex nicht erwiedern.}%
+\whitecard{FSK 18}{Pädophile.}%
+\whitecard{FSK 18}{Russische Kellerpornos.}%
 \whitecard{FSK 18}{Sex mit Patrick Steward.}%
 \whitecard{FSK 18}{Sich ein Einweckglas in den Anus einführen.}%
-\whitecard{FSK 18}{Zensierte Bukkakke-Pornos.}%
+\whitecard{FSK 18}{Freiwillige Vergewaltigung.}%
+\whitecard{FSK 18}{Zensierte Bukkakke-Pornos.}% original: verpixelte
 \whitecard{FSK 18}{Drei Schwänze auf einmal.}%
 \whitecard{FSK 18}{Ein Fleshlight.}%
 \whitecard{FSK 18}{Kein Sperma mehr übrig haben.}%
