--- a/categories/geschichte.tex
+++ b/categories/geschichte.tex
@@ -23,13 +23,17 @@
 %
 \whitecard{Geschichte}{Adolf Hitler.}%
 \whitecard{Geschichte}{Anders Breivik.}%
+\whitecard{Geschichte}{Der Amoklauf von Winnenden.}%
 \whitecard{Geschichte}{Historische schwarze Kollegen.}%
 \whitecard{Geschichte}{Der Versailler Vertrag.}%
+\whitecard{Geschichte}{Genghis Khan.}%
 \whitecard{Geschichte}{Hurricane Katrina.}%
+\whitecard{Geschichte}{Kim Jong-il.}%
+\whitecard{Geschichte}{Lee Harvey Oswald.}%
 \whitecard{Geschichte}{Sklaverei.}%
 \whitecard{Geschichte}{Unser erster Chimpansen-Kanzler.}%
 \whitecard{Geschichte}{Wikinger.}%
-\whitecard{Geschichte}{Zeitreisen Paradox.}%
+\whitecard{Geschichte}{Ein Zeitreise-Paradoxon.}%
 \whitecard{Geschichte}{Der Urknall.}%
 \whitecard{Geschichte}{Katapulte.}%
 \whitecard{Geschichte}{Marcus Iunius Brutus.}%
