--- a/categories/politik.tex
+++ b/categories/politik.tex
@@ -21,29 +21,35 @@
 %
 \titlecard{Politik}%
 %
-\whitecard{Politik}{Ihre Majestät, Königin Elizabeth II.}%
+\whitecard{Politik}{Ihre Majestät, Queen Elizabeth II.}% original: königliche Hoheit
 \whitecard{Politik}{Angela Merkel.}%
 \whitecard{Politik}{Barack Obama.}%
-\whitecard{Politik}{CDU-Wähler.}%
+\whitecard{Politik}{CDU-Wähler.}% probably: Republikaner
 \whitecard{Politik}{Die priviligierte Oberklasse.}%
 \whitecard{Politik}{Die Terroristen.}%
-\whitecard{Politik}{Frank-Walter Steinmeier.}%
+\whitecard{Politik}{Frank-Walter Steinmeier.}% probably from: Aaron Burr or Ronald Reagan?
+\whitecard{Politik}{Helmut Schmidt.}% trying to match: Aaron Burr or Ronald Reagan
+\whitecard{Politik}{Helmut Kohl.}% trying to match: Aaron Burr or Ronald Reagan
 \whitecard{Politik}{George W. Bush.}%
 \whitecard{Politik}{Italiener.}%
+\whitecard{politik}{Michelle Obamas Arme.}% probably replaced by "Angela Merkels Oberarme"?
 \whitecard{Politik}{Nazis.}%
+\whitecard{Politik}{Ottfried Fischer ernähren.}%
 \whitecard{Politik}{Stalin.}%
 \whitecard{Politik}{Weltfrieden.}%
 \whitecard{Politik}{Arbeitsplätze.}%
-\whitecard{Politik}{Die Eurokrise.}%
+\whitecard{Politik}{Die Euro-Krise.}%
 \whitecard{Politik}{Sigmar Gabriel.}%
 \whitecard{Politik}{Helmut Kohl.}%
 \whitecard{Politik}{Arbeitslose.}%
 \whitecard{Politik}{Der hart arbeitende Türke.}%
-\whitecard{Politik}{Angela Merkels Oberarme.}%
+\whitecard{Politik}{Angela Merkels Oberarme.}% probably from: Michelle Obamas Arme
 \whitecard{Politik}{Bayern.}%
 \whitecard{Politik}{Das Patriarchat.}%
-\whitecard{Politik}{Der Zorn des Putins.}%
+\whitecard{Politik}{Der Zorn des Putins.}%S
 \whitecard{Politik}{Beweise vernichten.}%
+% Replacement for Sarah Palin? -> politician, commentator, author, ninth Governor of Alaska 
+
 %
 \blackcard{1}{Politik}{Und gleich im Heute-Journal: "Hilfe, mein Sohn ist \underl!"}%
 \blackcard{1}{Politik}{Es ist eine Schande, dass Kinder heutzutage alle mit \underl in Berührung kommen.}%
