--- a/categories/kultur.tex
+++ b/categories/kultur.tex
@@ -21,29 +21,43 @@
 %
 \titlecard{Kultur}%
 %
+\whitecard{Kultur}{American Gladiators.}%
 \whitecard{Kultur}{Arnold Schwarzenegger.}%
+\whitecard{Kultur}{Britney Spears mit 65.}%
 \whitecard{Kultur}{Cards against Humanity.}%
+\whitecard{Kultur}{Christopher Walken.}%
 \whitecard{Kultur}{Darth Vader.}%
+\whitecard{Kultur}{Das Anstarren eines Glückbärchis.}%
 \whitecard{Kultur}{Das Krümel Monster.}%
 \whitecard{Kultur}{Die Macht.}%
-\whitecard{Kultur}{Eine M. Night Shyamalan Story-Wendung.}%
+\whitecard{Kultur}{Eine ``M. Night`` Shyamalan Story-Wendung.}% director of Sixth Sense, The Village, The Happening...
 \whitecard{Kultur}{Ein Live-Studio Publikum.}%
 \whitecard{Kultur}{Ein Amateurvideo von Heidi Klum, wie sie in eine Dose Ravioli heult.}%
+\whitecard{Kultur}{Günther Jauch, der von einem Schwarm Greifvögel attackiert wird.}%
+\whitecard{Kultur}{Heimvideo von Vera am Mittag beim Heulen in eine Friteuse.}%
+\whitecard{Kultur}{Hulk Hogan.}%
 \whitecard{Kultur}{Justin Bieber.}%
+\whitecard{Kultur}{Kanye West.}%
 \whitecard{Kultur}{Keanu Reeves.}%
 \whitecard{Kultur}{Lady Gaga.}%
+\whitecard{Kultur}{Mathleten.}% iCarly reference for a Math-Club
 \whitecard{Kultur}{Michael Jackson.}%
-\whitecard{Kultur}{Michael ``Bully'' Herbig.}%
+\whitecard{Kultur}{Michael ``Bully`` Herbig.}%
 \whitecard{Kultur}{Miley Cyrus mit 55.}%
+\whitecard{Kultur}{Mord im Orient-Express.}%
+\whitecard{Kultur}{Natalie Portman.}%
 \whitecard{Kultur}{Nickelback.}%
 \whitecard{Kultur}{Nicolas Cage.}%
 \whitecard{Kultur}{Oompa-Loompas.}%
+\whitecard{Kultur}{Popper.}% -> 80`s rocker and popper?
+\whitecard{Kultur}{Pumuckl.}%
 \whitecard{Kultur}{Robert Downey, Jr.}%
 \whitecard{Kultur}{RoboCop.}%
 \whitecard{Kultur}{Sean Connery.}%
 \whitecard{Kultur}{Sido.}%
+\whitecard{Kultur}{Skeletor.}%
 \whitecard{Kultur}{Star Trek.}%
-\whitecard{Kultur}{Thomas the Train.}%
+\whitecard{Kultur}{Thomas die Lokomotive.}%
 \whitecard{Kultur}{Vera Int-Veen}%
 \whitecard{Kultur}{William Shatner.}%
 \whitecard{Kultur}{Winnie Puh.}%
@@ -53,7 +67,9 @@
 \whitecard{Kultur}{Richterin Barbara Salesch.}%
 \whitecard{Kultur}{BATMAN!!!}%
 \whitecard{Kultur}{Das Flötensolo aus "My Heart Will Go On".}%
-\whitecard{Kultur}{Bastian Pastewkas Schauspiel- karriere.}%
+\whitecard{Kultur}{Bastian Pastewkas Schauspiel- karriere.}% original: Shaquile O'Neal
+% replacement for "Toni Morrisons Vagina"? -> awarded novelist, teacher
+% replacement for "Sean Penn"? actor, filmmaker
 %
 \blackcard{1}{Kultur}{In Ihrem neuen Film hat Hannah Montana zum ersten Mal mit \underl zu kämpfen.}%
 \blackcard{1}{Kultur}{Bevor ich Sie töte, Herr Bond, muss ich Ihnen \underl zeigen.}%
@@ -62,8 +78,8 @@
 \blackcard{1}{Kultur}{Demnächst erscheint: Harry Potter und die Kammer der \underl.}%
 \blackcard{1}{Kultur}{Gleich auf RTL: die Weltmeisterschaft der \underl.}%
 \blackcard{1}{Kultur}{RTLs neue Reality-TV-Show - Jetzt mit 8 Stars, die mit \underl zusammenleben.}%
-\blackcard{1}{Kultur}{Was hat Vin Diesel zum Mittag gegessen?}%
+\blackcard{1}{Kultur}{Was hat Vin Diesel zu Mittag gegessen?}%
 \blackcard{1}{Kultur}{Was ist Batmans geheime Vorliebe?}%
 \blackcard{2}{Kultur}{Dreamworks präsentiert: "\underl, die Geschichte von \underl."}%
-\blackcard{2}{Kultur}{In M. Night Shyamalans neuen Film findet Bruce Willis heraus, dass \underl in Wirklichkeit die ganze Zeit \underl war.}%
+\blackcard{2}{Kultur}{In ``M. Night`` Shyamalans neuen Film findet Bruce Willis heraus, dass \underl in Wirklichkeit die ganze Zeit \underl war.}%
 \blackcard{1}{Kultur}{99 \underl auf ihrem Weg zum Horizont.}%
