--- a/categories/religion.tex
+++ b/categories/religion.tex
@@ -23,19 +23,24 @@
 %
 \whitecard{Religion}{72 Jungfrauen.}%
 \whitecard{Religion}{Den Antichrist gebären.}%
-\whitecard{Religion}{Das Blut von Jesus Christus.}%
-\whitecard{Religion}{Das Jüngste Gericht.}%
+\whitecard{Religion}{Das Blut Christi.}% before: von Jesus Christus
+\whitecard{Religion}{Das Rote Meer teilen.}%
 \whitecard{Religion}{Der gesamte Chor eines Mormonen-Gotteshauses.}%
 \whitecard{Religion}{Der Papst.}%
+\whitecard{Religion}{Der Pfarrer Dr. Martin Luther King, Jr.}%
+\whitecard{Religion}{Der Tag des Jüngsten Gerichts.}% before: Das Jüngste Gericht
+\whitecard{Religion}{Der Tanz der Zahnfee.}%
 \whitecard{Religion}{Der Teufel höchst selbst.}%
 \whitecard{Religion}{Die Bibel.}%
 \whitecard{Religion}{Die Amisch.}%
 \whitecard{Religion}{Die Pfadfinder.}%
+\whitecard{Religion}{Die wahre Bedeutung von Weihnachten.}%
+\whitecard{Religion}{Ein Zigeunerfluch.}%
 \whitecard{Religion}{Gott.}%
+\whitecard{Religion}{Juden.}%
 \whitecard{Religion}{Meine Seele.}%
 \whitecard{Religion}{Messdiener.}%
-\whitecard{Religion}{Mohammed (Geheiligt sei sein Name).}%
+\whitecard{Religion}{Mohammed (Geheiligt sei sein Name!)}%
 \whitecard{Religion}{Scientology.}%
-\whitecard{Religion}{Die Juden.}%
 %
 \blackcard{1}{Religion}{Hier ist die Kirche, da sind der Kirchturm, Öffne die Türen und da ist \underl.}%
