--- a/categories/werbung.tex
+++ b/categories/werbung.tex
@@ -23,19 +23,27 @@
 %
 \whitecard{Werbung}{5 Euro Subway Footlongs.}%
 \whitecard{Werbung}{Activia\SymbReg.}%
+\whitecard{Werbung}{Astra.}%
+\whitecard{Werbung}{Auf Rolex umsteigen.}%
 \whitecard{Werbung}{Bifi\SymbReg.}%
+\whitecard{Werbung}{Das Michelin-Männchen.}%
 \whitecard{Werbung}{Der Ahoi-Brause Mann.}%
 \whitecard{Werbung}{Der kalte, erfrischende Geschmack einer Pepsi\SymbReg}%
-\whitecard{Werbung}{AXE\SymbReg Deo.}%
+\whitecard{Werbung}{Eine Super Soaker\SymbReg  voller Katzenpisse.}% before: Schwamm
+\whitecard{Werbung}{Euphoria\SymbReg  von Calvin Klein.}%
+\whitecard{Werbung}{AXE\SymbReg  Deo.}%
 \whitecard{Werbung}{Dibadibadu.}%
+\whitecard{Werbung}{Happy Hippos.}% 
+\whitecard{Werbung}{McDonalds Einmaleins.}%
 \whitecard{Werbung}{Meister Proper Sauberkraft.}%
+\whitecard{Werbung}{Meister Proper, direkt hinter dir.}%
 \whitecard{Werbung}{Ronald McDonald.}%
-\whitecard{Werbung}{Dominos\SymbReg Oreo Dessert Pizza.}%
-\whitecard{Werbung}{The World of Warcraft.}%
+\whitecard{Werbung}{Dominos\SymbReg  Oreo\SymbReg  Dessert Pizza.}%
+\whitecard{Werbung}{World of Warcraft.}%
 \whitecard{Werbung}{Viagra\SymbReg.}%
-\whitecard{Werbung}{Ein Bop it!}%
-\whitecard{Werbung}{Die Make-A-Wish Stiftung.}%
-\whitecard{Werbung}{Whiskas.}%
+\whitecard{Werbung}{Ein Bop It\SymbReg!}%
+\whitecard{Werbung}{Die Make-A-Wish\SymbReg  Stiftung.}%
+\whitecard{Werbung}{Whiskas.}% original: Fancy Feast
 \whitecard{Werbung}{All-you-can-eat Shrimps für 4,99 Euro.}%
 \whitecard{Werbung}{Das schwedische Tempur-Pedic\SymbReg\newline Schlafsystem.}%
 %
@@ -43,6 +51,6 @@
 \blackcard{1}{Werbung}{Statt der Rute bring der Weihnachtsmann unartigen Kindern jetzt \underl.}%
 \blackcard{1}{Werbung}{\underl: Von Kindern getestet, von Müttern empfohlen.}%
 \blackcard{1}{Werbung}{\underl: Gut bis zum letzten Tropfen.}%
-\blackcard{1}{Werbung}{Was ist das nächste Happy Meal\SymbReg Spielzeug?}%
+\blackcard{1}{Werbung}{Was ist das nächste Happy Meal\SymbReg  Spielzeug?}%
 \blackcard{1}{Werbung}{\underl macht Kinder froh und Erwachsene ebenso.}%
 \blackcard{1}{Werbung}{\underl, davon kann man nicht nur einen haben!}%
